# Coursework

./: CMakeLists.txt
Documents/: CollisionStateModel.drawio  CombatSequenceDiagram.drawio  FinalReport.docx  GDD(Revised).docx  GDD.docx  Schedule.gan  ~$GDD.docx  ~WRL3605.tmp
Game/: ActorMovementComponent.cpp  ActorMovementComponent.h  Andrel.cpp  Andrel.h  AnimatedSpriteComponent.cpp  AnimatedSpriteComponent.h  Animation.cpp  Animation.h  AudioManager.cpp  AudioManager.h  BattleEntity.cpp  BattleEntity.h  BattleManager.cpp  BattleManager.h  BattleParty.cpp  BattleParty.h  Camera.cpp  Camera.h  Character.cpp  Character.h  Charity.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Goblin.h  Helmaer.h  Horo.h  InputManager.cpp  InputManager.h  LoadManager.cpp  LoadManager.h  Main.cpp  PlayerMovementComponent.cpp  PlayerMovementComponent.h  Scene.h  ShapeComponent.cpp  ShapeComponent.h  SpriteComponent.cpp  SpriteComponent.h  (+6 more)
Libs/combat/: AffectableBase.h  BattleEntity.h  BattleManager.cpp  BattleManager.h  EntityDamageEffect.cpp  EntityDamageEffect.h  EntityEffect.h  EntityHealEffect.cpp  EntityHealEffect.h  EntityPercentHealEffect.cpp  EntityPercentHealEffect.h  EntityStatusEffect.cpp  EntityStatusEffect.h  Globals.h  Inventory.h  Item.cpp  Item.h  StatusEffect.cpp  StatusEffect.h  UseableBase.cpp  UseableBase.h
Libs/ecm/: ecm.cpp  ecm.h
Libs/level_loader/: LevelLoader.cpp  LevelLoader.h
Libs/maths/: maths.h
Res/: Game-Art-References.txt
Res/Maps/: TestLevel.txt  Water.txt
Res/Sprites/: HealthBar.pdn
